--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>My Contact Details: </h1>
-    <p>Mayur Vihar, New Delhi-91</p>
+    <p>Mayur Vihar, New Delhi</p>
     <p>******3227</p>
     <p>g.samarth@outlook.com</p>
     <form action="mailto:samarthraghavg@gmail.com" method="post" enctype="text/plain">
